Add new index page for just listing the blog posts

--- a/config.toml
+++ b/config.toml
@@ -63,7 +63,7 @@ publishDir = "../analyticjeremy.github.io"
 
 [[menu.main]]
     name = "Blog"
-    url = ""
+    url = "post"
     weight = 1
 
 [[menu.main]]
